[project]
name = "locness-calibration-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "isfetphcalc",
    "marimo>=0.14.13",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "quarto>=0.1.0",
]

[tool.uv.sources]
isfetphcalc = { git = "https://github.com/blongworth/isfetphcalc.git" }
